--- a/FMML_M2Lab_1.ipynb
+++ b/FMML_M2Lab_1.ipynb
@@ -657,7 +657,7 @@
         "\n",
         "To do this, we will use the Seaborn package. Seaborn is a Python data visualization library based on matplotlib.\n",
         "\n",
-        "We will be creating a Box Plot. This is the type of plot that can be used to obtain more of the statistical details about the data. The straight lines at the maximum and minimum are also called as whiskers. Points outside of whiskers will be inferred as an outliers. The box plot gives us a representation of 25th, 50th ,75th quartiles. From a box plot we can also see the Interquartile range(IQR) where maximum details of the data will be present. It also gives us a clear overview of outlier points in the data."
+        "We will be creating a Box Plot. This is the type of plot that can be used to obtain more of the statistical details about the data. The straight lines at the maximum and minimum are also called as whiskers. Points outside of whiskers will be inferred as an outliers. The box plot gives us a representation of 25th, 50th ,75th quartiles. From a box plot we can also see the Interquartile range(IQR) where maximum details of the data will be present. It also gives us a clear overview of outlier z xx,lgs."
       ]
     },
     {
